move all tranfer processes to background and return pending user balance
